...
          child: Column(
            mainAxisSize: MainAxisSize.min,
            children: [
              Padding(
                padding: const EdgeInsets.all(8.0),
                child: TextFormField(
                  key: Key("signIn_email"),
                  controller: _usernameTextController,
                  decoration: const InputDecoration(
                      icon: Icon(Icons.person),
                      border: OutlineInputBorder(),
                      hintText: 'Enter email address'),
                  validator: (value) {
                    if (_isLogInFailed) {
                      return 'Invalid email or password';
                    } else if (value == null || value.isEmpty) {
                      return 'Please enter your email';
                    }
...
                  },
                ),
              ),
              Padding(
                padding: const EdgeInsets.all(8.0),
                child: TextFormField(
                  key: Key('signIn_password'),
                  controller: _passwordTextController,
                  obscureText: true,
                  obscuringCharacter: '*',
                  decoration: const InputDecoration(
                      icon: Icon(Icons.password),
                      border: OutlineInputBorder(),
...
                    }
                    return null;
                  },
                ),
              ),
              TextButton(
                key: Key('signIn_button'),
                style: TextButton.styleFrom(
                    foregroundColor: Colors.white,
                    backgroundColor: mainColor,
                    padding: EdgeInsets.all(15)),
                onPressed: () async {
                  _isLogInFailed = false;
...
