...
                              },
                            ),
                          ),
                          Padding(
                            padding: const EdgeInsets.all(8.0),
                            child: TextFormField(
                              key: const Key('EventDescriptionKey'),
                              readOnly: event.status == EventStatus.inFuture ||
                                      widget.eventId == null
                                  ? false
                                  : true,
                              keyboardType: TextInputType.multiline,
                              maxLines: null,
                              controller: _nameTextController,
                              decoration: const InputDecoration(
                                  icon: Icon(Icons.description),
                                  border: OutlineInputBorder(),
                                  hintText: 'Enter event description'),
                              validator: (value) {
                                if (value == null || value.isEmpty) {
                                  return 'Please enter event description';
                                } else
                                  return null;
                              },
...
                                                      ],
                                                    ));
                                          }
                                          context.go('/organizerPanel');
                                        }
                                      },
                                      child: Text('Cancel event'),
                                    ),
                              Row(
                                mainAxisAlignment: MainAxisAlignment.end,
                                children: [
                                  if (event.status == EventStatus.inFuture ||
                                      widget.eventId == null)
...
