...
              ),
              SizedBox(
                width: 60,
              ),
              TextButton(
                onPressed: () => context.go('/signIn'),
                child: _NavBarItem('Sign In'),
              ),
            ],
          )
        ],
      ),
    );
...
