...
                      style:
                          TextStyle(fontSize: 20, fontWeight: FontWeight.bold),
                    )),
                Row(
                  children: [
                    ElevatedButton.icon(
                      key: const Key('CreateNewEventKey'),
                      onPressed: () {
                        context.go('/organizerPanel/addEvent');
                      },
                      icon: Icon(
                        Icons.add,
                        color: Colors.white,
                      ),
                      label: Text(
                        "Create new Event",
                        style: TextStyle(fontSize: 20, color: Colors.white),
                      ),
                      style: flatButtonStyle,
                    )
                  ],
                )
...
